# HydrologicalTwinAlphaSeries

./: .gitignore  .gitmodules  README.md  pixi.toml  pyproject.toml
.github/workflows/: bump-version.yml  ci.yml
docs/: api_capabilities.md  api_examples.md  canonical_monolith.md  domain_model.md
src/HydrologicalTwinAlphaSeries/: Compartment.py  Extraction.py  Manage.py  Mesh.py  Observations.py  Renderer.py  Vec_Operator.py  __init__.py
src/HydrologicalTwinAlphaSeries/domain/: Compartment.py  Extraction.py  Mesh.py  Observations.py  __init__.py  timeframe.py
src/HydrologicalTwinAlphaSeries/ht/: __init__.py  api_types.py  hydrological_twin.py
src/HydrologicalTwinAlphaSeries/services/: Manage.py  Renderer.py
src/HydrologicalTwinAlphaSeries/tools/: spatial_utils.py
tests/integration/: test_facade_lifecycle.py
tests/unit/: test_renderer.py  test_timeframe.py  test_version.py
