[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "HydrologicalTwinAlphaSeries"
version = "000.alpha.05"
description = "Standalone backend package for the CaWaQS alpha-series hydrological twin workflows."
readme = "README.md"
requires-python = ">=3.10"
license = "EPL-2.0"
authors = [
    { name = "Nicolas Flipo" },
    { name = "Simone Mazzarelli" },
    { name = "Lise-Marie Girod" },
]
dependencies = [
    "geopandas>=1.1.2,<2",
    "matplotlib>=3.10.8,<4",
    "numpy>=1.26,<3",
    "pandas>=2.2,<3",
    "plotly>=5.19,<7",
    "scipy>=1.17.1,<2",
    "shapely>=2,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "ruff>=0.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/HydrologicalTwinAlphaSeries"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"src/HydrologicalTwinAlphaSeries/services/Manage.py" = ["E501"]
# Deprecation shim files: warnings.warn() must precede the actual import
"src/HydrologicalTwinAlphaSeries/Compartment.py" = ["E402"]
"src/HydrologicalTwinAlphaSeries/Extraction.py" = ["E402"]
"src/HydrologicalTwinAlphaSeries/Manage.py" = ["E402"]
"src/HydrologicalTwinAlphaSeries/Mesh.py" = ["E402"]
"src/HydrologicalTwinAlphaSeries/Observations.py" = ["E402"]
"src/HydrologicalTwinAlphaSeries/Renderer.py" = ["E402"]
"src/HydrologicalTwinAlphaSeries/Vec_Operator.py" = ["E402"]
